--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "map_creator"]
 	path = map_creator
-	url = git@github.com:udacity/pgm_map_creator.git
+	url = https://github.com/udacity/pgm_map_creator.git
